--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header h1 {
 header p {
   margin: 0;
   font-size: 1rem;
+  color : black;
 }
 
 /* Main Content */
@@ -190,35 +191,7 @@ footer {
   padding: 20px 0;
 }
 
-#contact-form-section {
-    border: none;
-    box-shadow: none;
-    width: 90%;
-    max-width: 500px;
-    margin: 0 auto;
-    padding-bottom: 20px;
-}
 
-#contact-form-section h2 {
-    color: white;
-}
-
-#partnership-form label {
-  color: #f8f9fa;
-}
-
-#partnership-form input, #partnership-form textarea {
-    background-color: #495057;
-    color: white;
-    border-color: #6c757d;
-}
-
-#partnership-form button[type="submit"] {
-  background-color: #17a2b8;
-}
-#partnership-form button[type="submit"]:hover {
-  background-color: #138496;
-}
 
 footer p {
     margin-top: 20px;
